# codepost-stats

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: dependencies-update.yaml  main.yml
docs/source/: codepost_stats.analyzers.abstract.rst  codepost_stats.analyzers.rst  codepost_stats.rst  conf.py  index.rst  modules.rst
src/codepost_stats/: __init__.py  event_loop.py  helpers.py
src/codepost_stats/analyzers/: __init__.py  pool.py  standard.py
src/codepost_stats/analyzers/abstract/: __init__.py  base.py  simple.py
tests/: test_codepost_stats.py  test_event_loop.py  test_helpers.py  test_import.py
tests/analyzers/: test_pool.py  test_standard.py
tests/analyzers/abstract/: test_base.py  test_simple.py
