[tool.poetry]
name = "codepost-stats"
version = "0.0.1"
description = "A system to compile statistics automatically from a course on the codePost platform."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
codepost = "^0.2.25"
javalang = "^0.13.0"
pyyaml = "^5.3.1"
python-dateutil = "^2.8.1"
confuse = "^1.3.0"
mistune = "^0.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
